tdf#106236 Check for all constraints with Calc function PDURATION.

Plus use of correct prefixes for variable names.

Change-Id: I430039fa23fc73e13bf1992f4188a67ae47b52ab
Reviewed-on: https://gerrit.libreoffice.org/34819
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>